# simple_file_logger

./: .gitignore  Cargo.toml  README.md
.github/workflows/: codecov.yml  main.yml  publish.yml
src/: lib.rs
