[package]
name = "simple_file_logger"
version = "0.3.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/mendelsshop/simple_file_logger"
keywords = ["logging", "logger", "file_logger", "log"]
categories = ["development-tools::debugging"]
description = "A simple file logger for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
flexi_logger = "0.28.0"
