[package]
name = "simple_file_logger"
version = "0.4.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/mendelsshop/simple_file_logger"
keywords = ["logging", "logger", "file_logger", "log"]
categories = ["development-tools::debugging"]
description = "A simple file logger for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
clap = ["dep:clap"]

[dependencies]
dirs = "6.0.0"
flexi_logger = "0.29.8"
serde = { optional = true, version = "1.0.218", features = ["derive"]}
clap = { optional = true, version = "4.5.31", features = ["derive"]}
